--- a/css/brands.css
+++ b/css/brands.css
@@ -37,14 +37,14 @@ button {
   text-align: center;
   vertical-align: middle;
   font-size: 18px;
-  width: 300px;
+  width: 500px;
   font-weight: 700;
   line-height: 20px;
   padding: 14px 12px 12px 12px;
   letter-spacing: 0.1px;
   white-space: wrap;
   outline: none;
-  border-radius: 8px;
+  border-radius: 16px;
   cursor: pointer;
   
 }     
@@ -69,7 +69,7 @@ button:hover,
 
 .icon {
   padding: 0px 8px 3.5px 0px;
-  vertical-align: middle;
+  vertical-align: left;
   width: 20px;
   height: 20px;
 }
@@ -84,7 +84,7 @@ button:hover,
 }
 .button.button-default:hover,
 .button.button-default:focus {
-  filter: brightness(90%);
+  filter: brightness(110%);
 }
 
 /* Amazon */
