--- a/css/brands.css
+++ b/css/brands.css
@@ -38,13 +38,13 @@ button {
   vertical-align: middle;
   font-size: 18px;
   width: 500px;
-  font-weight: 700;
+  font-weight: 600;
   line-height: 20px;
   padding: 12px 12px 12px 12px;
   letter-spacing: 0.1px;
   white-space: wrap;
   outline: none;
-  border-radius: 16px;
+  border-radius: 20px;
   cursor: pointer;
   
 }     
@@ -68,8 +68,8 @@ button:hover,
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 
 .icon {
-  padding: 10px 2px 3.5px 0px;
-  vertical-align: left;
+  padding: 0px 2px 3.5px 0px;
+  vertical-align: text-top;
   width: 20px;
   height: 20px;
 }
@@ -234,37 +234,6 @@ button:hover,
   filter: brightness(90%);
 }
 
-/* Cash App */
-.button.button-cash-app {
-  color: #ffffff;
-  background-image: linear-gradient(to bottom, #00d64b, #00c244);
-}
-.button.button-cash-app:hover,
-.button.button-cash-app:focus {
-  filter: brightness(90%);
-}
-
-/* Clubhouse */
-.button.button-clubhouse {
-  color: #1F1F1A;
-  background-color: #F1EFE3;
-  border: 1px solid #212121;
-}
-.button.button-clubhouse:hover,
-.button.button-clubhouse:focus {
-  filter: brightness(90%);
-}
-
-/* dev.to */
-.button.button-dev-to {
-  color: #000000;
-  background-color: #f5f5f5;
-  border: 1px solid #212121;
-}
-.button.button-dev-to:hover,
-.button.button-dev-to:focus {
-  filter: brightness(90%);
-}
 
 /* Discord */
 .button.button-discord {
@@ -307,76 +276,7 @@ button:hover,
   filter: brightness(90%);
 }
 
-/* Facebook Messenger */
-.button.button-messenger {
-  color: #ffffff;
-  background-image: linear-gradient(
-    25deg,
-    #0099ff,
-    #5f5dff,
-    #a033ff,
-    #c740cc,
-    #ff5280,
-    #ff7061
-  );
-}
-.button.button-messenger:hover,
-.button.button-messenger:focus {
-  filter: brightness(90%);
-}
 
-/* Figma */
-.button.button-figma {
-  color: #ffffff;
-  background-color: #000000;
-  border: 1px solid #FFFFFF;
-}
-.button.button-figma:hover,
-.button.button-figma:focus {
-  filter: brightness(90%);
-}
-
-/* Fiverr */
-.button.button-fiverr {
-  color: #ffffff;
-  background-color: #1DBF73;
-}
-.button.button-fiverr:hover,
-.button.button-fiverr:focus {
-  filter: brightness(90%);
-}
-
-/* Flickr */
-.button.button-flickr {
-  color: #ffffff;
-  background-color: #000000;
-  border: 1px solid #FFFFFF;
-}
-.button.button-flickr:hover,
-.button.button-flickr:focus {
-  filter: brightness(90%);
-}
-
-/* GitHub */
-.button.button-github {
-  color: #ffffff;
-  background-color: #000000;
-  border: 1px solid #FFFFFF;
-}
-.button.button-github:hover,
-.button.button-github:focus {
-  filter: brightness(90%);
-}
-
-/* GitLab */
-.button.button-gitlab {
-  color: #ffffff;
-  background-color: #6151b2;
-}
-.button.button-gitlab:hover,
-.button.button-gitlab:focus {
-  filter: brightness(90%);
-}
 
 /* Goodreads */
 .button.button-goodreads {
@@ -389,70 +289,6 @@ button:hover,
   filter: brightness(90%);
 }
 
-/* Google Black */
-.button.button-google-black {
-  color: #FFFFFF;
-  background-color: #000000;
-  border: 1px solid #FFFFFF;
-}
-.button.button-google-black:hover,
-.button.button-google-black:focus {
-  filter: brightness(90%);
-}
-
-/* Google Play Store */
-.button.button-playstore {
-  color: #FFFFFF;
-  background-color: #000000;
-  border: 1px solid #FFFFFF;
-}
-.button.button-playstore:hover,
-.button.button-playstore:focus {
-  filter: brightness(90%);
-}
-
-/* Google Podcasts */
-.button.button-google-podcasts {
-  color: #000000;
-  background-color: #FFFFFF;
-  border: 1px solid #212121;
-}
-.button.button-google-podcasts:hover,
-.button.button-google-podcasts:focus {
-  filter: brightness(90%);
-}
-
-/* Google Scholar */
-.button.button-google-scholar {
-  color: #000000;
-  background-color: #FFFFFF;
-  border: 1px solid #212121;
-}
-.button.button-google-scholar:hover,
-.button.button-google-scholar:focus {
-  filter: brightness(90%);
-}
-
-/* Guilded */
-.button.button-guilded {
-  color: #000000;
-  background-color: #F5C400;
-}
-.button.button-guilded:hover,
-.button.button-guilded:focus {
-  filter: brightness(90%);
-}
-
-/* Hashnode */
-.button.button-hashnode {
-  color: #000000;
-  background-color: #ffffff;
-  border: 1px solid #212121;
-}
-.button.button-hashnode:hover,
-.button.button-hashnode:focus {
-  filter: brightness(90%);
-}
 
 /* Instagram */
 .button.button-instagram {
@@ -464,26 +300,6 @@ button:hover,
   filter: brightness(90%);
 }
 
-/* Kickstarter */
-.button.button-kickstarter {
-  color: #ffffff;
-  background-color: #05ce78;
-}
-.button.button-kickstarter:hover,
-.button.button-kickstarter:focus {
-  filter: brightness(90%);
-}
-
-/* Kit */
-.button.button-kit {
-  color: #ffffff;
-  background-color: #000000;
-  border: 1px solid #FFFFFF;
-}
-.button.button-kit:hover,
-.button.button-kit:focus {
-  filter: brightness(90%);
-}
 
 /* Ko-fi */
 .button.button-ko-fi {
@@ -492,16 +308,6 @@ button:hover,
 }
 .button.button-ko-fi:hover,
 .button.button-ko-fi:focus {
-  filter: brightness(90%);
-}
-
-/* Last.fm */
-.button.button-last-fm {
-  color: #ffffff;
-  background-color: #D51007;
-}
-.button.button-last-fm:hover,
-.button.button-last-fm:focus {
   filter: brightness(90%);
 }
 
@@ -516,16 +322,6 @@ button:hover,
   filter: brightness(90%);
 }
 
-/* Line */
-.button.button-line {
-  color: #FFFFFF;
-  background-color: #06C755;
-}
-.button.button-line:hover,
-.button.button-line:focus {
-  filter: brightness(90%);
-}
-
 
 /* LinkedIn */
 .button.button-linked {
@@ -537,27 +333,6 @@ button:hover,
   filter: brightness(90%);
 }
 
-/* Mailchimp */
-.button.button-mailchimp {
-  color: #000000;
-  background-color: #FFE01B;
-}
-.button.button-mailchimp:hover,
-.button.button-mailchimp:focus {
-  filter: brightness(90%);
-}
-
-/* Mastodon */
-.button.button-mastodon {
-  color: #ffffff;
-  background-color: #17063B;
-  border: 1px solid #FFFFFF;
-}
-.button.button-mastodon:hover,
-.button.button-mastodon:focus {
-  filter: brightness(90%);
-}
-
 /* Medium */
 .button.button-medium {
   color: #ffffff;
@@ -566,17 +341,6 @@ button:hover,
 }
 .button.button-medium:hover,
 .button.button-medium:focus {
-  filter: brightness(90%);
-}
-
-/* Notion */
-.button.button-notion {
-  color: #000000;
-  border: 1px solid #212121;
-  background-color: #ffffff;
-}
-.button.button-notion:hover,
-.button.button-notion:focus {
   filter: brightness(90%);
 }
 
@@ -664,17 +428,6 @@ button:hover,
   filter: brightness(90%);
 }
 
-/* Reddit */
-.button.button-reddit {
-  color: #000000;
-  background-color: #d7dfe2;
-  border: 1px solid #212121;
-}
-.button.button-reddit:hover,
-.button.button-reddit:focus {
-  filter: brightness(90%);
-}
-
 /* Shop */
 .button.button-shop {
   color: #ffffff;
@@ -682,58 +435,6 @@ button:hover,
 }
 .button.button-shop:hover,
 .button.button-shop:focus {
-  filter: brightness(90%);
-}
-
-/* Signal */
-.button.button-signal {
-  color: #ffffff;
-  background-color: #3a76f0;
-}
-.button.button-signal:hover,
-.button.button-signal:focus {
-  filter: brightness(90%);
-}
-
-/* Skoob */
-.button.button-skoob {
-  color: #ffffff;
-  background-color: #3189c8;
-}
-.button.button-skoob:hover,
-.button.button-skoob:focus {
-  filter: brightness(90%);
-}
-
-/* Slack */
-.button.button-slack {
-  color: #000000;
-  background-color: #FFFFFF;
-  border: 1px solid #212121;
-}
-.button.button-slack:hover,
-.button.button-slack:focus {
-  filter: brightness(90%);
-}
-
-
-/* Snapchat */
-.button.button-snapchat {
-  color: #000000;
-  background-color: #fffc00;
-}
-.button.button-snapchat:hover,
-.button.button-snapchat:focus {
-  filter: brightness(90%);
-}
-
-/* SoundCloud */
-.button.button-soundcloud {
-  color: #ffffff;
-  background-color: #ff5500;
-}
-.button.button-soundcloud:hover,
-.button.button-soundcloud:focus {
   filter: brightness(90%);
 }
 
@@ -765,26 +466,6 @@ button:hover,
 }
 .button.button-square:hover,
 .button.button-square:focus {
-  filter: brightness(90%);
-}
-
-/* Steam */
-.button.button-steam {
-  color: #ffffff;
-  background-image: linear-gradient(90deg, #08BBFF, #2B75FF);
-}
-.button.button-steam:hover,
-.button.button-steam:focus {
-  filter: brightness(90%);
-}
-
-/* Strava */
-.button.button-strava {
-  color: #ffffff;
-  background-color: #fc5200;
-}
-.button.button-strava:hover,
-.button.button-strava:focus {
   filter: brightness(90%);
 }
 
