--- a/css/brands.css
+++ b/css/brands.css
@@ -72,7 +72,7 @@ button:hover,
   vertical-align: text-top;
   width: 20px;
   height: 20px;
-  position: absolute;
+  position: relative;
   left: 8px;
   top: 50%;
   transform: translateY(-50%);
