--- a/css/brands.css
+++ b/css/brands.css
@@ -68,12 +68,12 @@ button:hover,
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 
 .icon {
-  padding: 0px 2px 0px 1px;
+  padding: 0px 2px 3.5px 1px;
   vertical-align: middle;
   width: 20px;
   height: 20px;
   position: relative;
-  left: 2px;
+  left: 10%;
   top: 50%;
 }
 
