--- a/css/brands.css
+++ b/css/brands.css
@@ -69,12 +69,12 @@ button:hover,
 
 .icon {
   padding: 0px 2px 3.5px 1px;
-  vertical-align: middle;
+  vertical-align: baseline;
   width: 20px;
   height: 20px;
   position: absolute;
   left: 5%;
-  top: 20%;
+  top: 0%;
 }
 
 /* Brand Styles
