--- a/css/skeleton-auto.css
+++ b/css/skeleton-auto.css
@@ -93,8 +93,8 @@ body {
   font-size: 18px;
   line-height: 24px;
   font-weight: 400;
-  font-family: "Open Sans", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial,
-    sans-serif;
+  font-family: 'Inknut Antiqua', "Open Sans", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial,
+    sans-serif, serif;
 }
 
 /* Typography
@@ -105,7 +105,7 @@ h1 {
   font-weight: 800;
 }
 h1 {
-  font-size: 24px;
+  font-size: 20px;
   line-height: 64px;
   letter-spacing: 0;
 }
