--- a/css/skeleton-auto.css
+++ b/css/skeleton-auto.css
@@ -103,7 +103,7 @@ h1 {
   margin-top: 0;
   margin-bottom: 16px;
   font-weight: 600;
-  font-family: 'Inknut Antiqua', serif;
+  font-family: 'Yeseva One', cursive;
 }
 h1 {
   font-size: 20px;
