--- a/css/brands.css
+++ b/css/brands.css
@@ -1,63 +1,94 @@
 /*
-* littlelink.io
-* Skeleton V2.0.4
-* Copyright 2014, Dave Gamache
-* www.getskeleton.com
-* Free to use under the MIT license.
-* http://www.opensource.org/licenses/mit-license.php
-* 12/29/2014
-*/
-
-/*
 * Built using on:
 * Skeleton V2.0.4
-* Copyright 2014, Dave Gamache
-* www.getskeleton.com
-* Free to use under the MIT license.
-* http://www.opensource.org/licenses/mit-license.php
-* 12/29/2014
 */
 
 /* Table of contents
 ––––––––––––––––––––––––––––––––––––––––––––––––––
-
 - Buttons
 - Brand Styles
-
 */
 
 /* Buttons
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
+body {
+  background-image: url("https://cdn.pixabay.com/photo/2019/05/25/15/23/sunset-4229277_960_720.jpg");
+  background-size: cover;
+  background-position: center;
+}
+
+.button-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 50vh;
+  transform: translateY(-50%);
+}
+
+.button {
+  position: relative;
+  display: block;
+  overflow: hidden;
+  border-radius: 20px;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+  transition: all 0.2s ease-in-out;
+  margin-bottom: 20px;
+  width: 400px;
+  height: auto;
+}
+
+.button:hover {
+  box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
+}
+
+.button-content {
+  padding: 20px;
+  text-align: center;
+  background-color: #fff;
+  color: #333;
+}
 
 .button,
 button {
-  display: inline-block;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
   text-decoration: none;
-  height: 100%;
   text-align: center;
   vertical-align: middle;
-  font-size: 18px;
+  font-size: 15px;
   width: 300px;
   font-weight: 600;
-  line-height: 20px;
-  padding: 12px 12px 12px 12px;
+  line-height: 35px;
+  padding: 10px;
   letter-spacing: 0.1px;
   white-space: wrap;
   outline: none;
-  border-radius: 20px;
+  border-radius: 50px;
   cursor: pointer;
-  
+  margin: 0 auto; /* Centers the buttons horizontally */
+  margin-bottom: -15px;
+
+  /* Responsive styles */
+  @media only screen and (max-width: 600px) {
+    width: 100%; /* Makes the buttons full width on mobile */
+    max-width: 300px; /* Limits the maximum width of the buttons on mobile */
+  }
 }     
+
 button:hover,
 .button:focus {
   color: #212121;
   border-color: #888;
-  outline: #7AB8FF solid 3px
+  outline: #7AB8FF solid 3px;
 }
+
 .button.button-primary {
   color: #fff;
   filter: brightness(90%);
 }
+
 .button.button-primary:hover,
 .button.button-primary:focus {
   color: #fff;
@@ -86,9 +117,8 @@ button:hover,
 }
 .button.button-default:hover,
 .button.button-default:focus {
-  transition: width 0.7s ease; height: 0.7s ease in out;
-  width: 55vw;
-  height: 4vw;
+  transition: width 1s ease-out;
+  width: 320px;
   filter: brightness(120%);
 }
 
