--- a/css/brands.css
+++ b/css/brands.css
@@ -12,7 +12,7 @@
 /* Buttons
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 body {
-  background-image: url("https://cdn.pixabay.com/photo/2019/05/25/15/23/sunset-4229277_960_720.jpg");
+  background-image: url("images/fundopapel.jpg");
   background-size: cover;
   background-position: center;
 }
