--- a/css/skeleton-light.css
+++ b/css/skeleton-light.css
@@ -138,7 +138,7 @@ code {
   margin: 0 0.2rem;
   font-size: 90%;
   white-space: nowrap;
-  background: #f1f1f1;
+  background: #ffffff;
   border: 1px solid #e1e1e1;
   border-radius: 4px;
 }
