--- a/css/skeleton-auto.css
+++ b/css/skeleton-auto.css
@@ -1,20 +1,6 @@
 /*
 * Skeleton V2.0.4
 
-/* Table of contents
-––––––––––––––––––––––––––––––––––––––––––––––––––
-- Grid
-- Base Styles
-- Typography
-- Links
-- Code
-- Spacing
-- Utilities
-*
-* You'll find the button css in css/brands.css.
-*
-*/
-
 /* Grid
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 .container {
@@ -88,6 +74,7 @@ h1 {
   margin-top: 5;
   margin-bottom: 5px;
   font-weight: 600;
+  color: rgb(43, 43, 43);
 }
 h1 {
   font-size: 20px;
@@ -99,6 +86,7 @@ h2 {
   line-height: 30px;
   letter-spacing: 0;
 }
+
 /* Larger than phablet */
 @media (min-width: 550px) {
   h1 {
