--- a/css/brands.css
+++ b/css/brands.css
@@ -58,14 +58,14 @@ button {
   text-align: center;
   vertical-align: middle;
   font-size: 15px;
-  width: 600px;
+  width: 300px;
   font-weight: 600;
   line-height: 35px;
-  padding: 19px;
+  padding: 8px;
   letter-spacing: 0.1px;
   white-space: wrap;
   outline: none;
-  border-radius: 50px;
+  border-radius: 10px;
   cursor: pointer;
   margin: 0 auto; /* Centers the buttons horizontally */
   margin-bottom: -15px;
@@ -113,7 +113,7 @@ button:hover,
 /* Default (this is great for your own brand color!) */
 .button.button-default {
   color: #535353;
-  background-color: #e4e4e4;
+  background-color: #f7f7f7;
 }
 .button.button-default:hover,
 .button.button-default:focus {
